# shogi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  client.lua  main.lua  server.lua
server/: .gitignore  index.html
src/: bindgen.rs  debug.rs  lib.rs  main.rs  mouse.rs  regular.rs  reserve.rs  tests.rs
