[package]
name = "shogi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add dynamic here when not developing to not wait 1 hr on iteration
bevy = { version = "0.7.0", features = [] }
winit = "0.26"
wasm-bindgen = "0.2.81"

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5"
web-sys = { version = "0.3", default-features = false }

[profile.release]
lto = true
